Updated information and fixed markup

--- a/krknocleg.html
+++ b/krknocleg.html
@@ -1,28 +1,38 @@
-<html>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+<title>Тимчасове житло для біженців</title>
+</head>
 <body>
 <h1>Тимчасове житло для біженців</h1>
 <p>
 (карта нижче)
 </p>
+<h2>Консультація</h2>
+<ul>
+<li>
+<h3>ul. Radziwiłłowska, 3 (Радзівілло́вська)</h3>
+<p>Інформація, допомога в пошуку житла</p>
+<p>750 метрів від вокзалу (10 хв пішки)</p>
+<p>tel. <a href="tel:+48722297726">+48 722 297 726</a></p>
+<p>tel. <a href="tel:+48722297725">+48 722 297 725</a></p>
+<p>tel. <a href="tel:+48123236630">+48 12 323 66 30</a></p>
+<p><a href="https://www.facebook.com/ZyjwKrakowie/">https://www.facebook.com/ZyjwKrakowie/</a></p>
+</li>
+</ul>
+<h2>Пункти нічлігу</h2>
 <p>
 <strong>УВАГА!</strong> Перш ніж іти в пункт нічлігу, подзвоніть і переконайтесь, що там є достатньо вільних місць!
 </p>
 <ul>
 <li>
-<h2>ul. Radziwiłłowska, 3 (Радзівілло́вська)</h2>
-<p>Нічліг на 1 ніч, консультація</p>
-<p>750 метрів від вокзалу (10 хв пішки)</p>
-<p>tel. <a href="tel:+48722297726">+48 722 297 726</a></p>
-<p>tel. <a href="tel:+48722297725">+48 722 297 725</a></p>
-</li>
-<li>
-<h2>ul. Kopernika, 21 (Коперні́ка)</h2>
+<h3>ul. Kopernika, 21 (Коперні́ка)</h3>
 <p>Нічліг</p>
 <p>1300 метрів від вокзалу (15 хв пішки)</p>
 <p>tel. <a href="tel:+48668254980">+48 668 254 980</a></p>
 </li>
 <li>
-<h2>ul. Śniadeckich, 5 (Сьняде́цкіх)</h2>
+<h3>ul. Śniadeckich, 5 (Сьняде́цкіх)</h3>
 <p>Нічліг</p>
 <p>2 кілометри від вокзалу (25 хв пішки)</p>
 <p>tel. <a href="tel:+48660637805">+48 660 637 805</a></p>
@@ -37,7 +47,7 @@
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
 
 <div id="OSM-map" style="height: 1600px; width: 80%; margin: 0 auto;"></div>
-<script type="text/javascript">var map;
+<script>var map;
 var marker = [];
 var mapOptions = {
     scrollWheelZoom: false,
@@ -118,5 +128,5 @@ marker.bindPopup('Нічліг');
 </script>
 
 
-<body>
+</body>
 </html>
