--- a/krknocleg.html
+++ b/krknocleg.html
@@ -1,132 +1,31 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
-<title>Тимчасове житло для біженців</title>
+    <title>Безплатний нічліг для біженців</title>
+    <meta charset="utf-8">
 </head>
+
 <body>
-<h1>Тимчасове житло для біженців</h1>
-<p>
-(карта нижче)
-</p>
-<h2>Консультація</h2>
-<ul>
-<li>
-<h3>ul. Radziwiłłowska, 3 (Радзівілло́вська)</h3>
-<p>Інформація, допомога в пошуку житла</p>
-<p>750 метрів від вокзалу (10 хв пішки)</p>
-<p>tel. <a href="tel:+48722297726">+48 722 297 726</a></p>
-<p>tel. <a href="tel:+48722297725">+48 722 297 725</a></p>
-<p>tel. <a href="tel:+48123236630">+48 12 323 66 30</a></p>
-<p><a href="https://www.facebook.com/ZyjwKrakowie/">https://www.facebook.com/ZyjwKrakowie/</a></p>
-</li>
-</ul>
-<h2>Пункти нічлігу</h2>
-<p>
-<strong>УВАГА!</strong> Перш ніж іти в пункт нічлігу, подзвоніть і переконайтесь, що там є достатньо вільних місць!
-</p>
-<ul>
-<li>
-<h3>ul. Kopernika, 21 (Коперні́ка)</h3>
-<p>Нічліг</p>
-<p>1300 метрів від вокзалу (15 хв пішки)</p>
-<p>tel. <a href="tel:+48668254980">+48 668 254 980</a></p>
-</li>
-<li>
-<h3>ul. Śniadeckich, 5 (Сьняде́цкіх)</h3>
-<p>Нічліг</p>
-<p>2 кілометри від вокзалу (25 хв пішки)</p>
-<p>tel. <a href="tel:+48660637805">+48 660 637 805</a></p>
-</li>
-</ul>
-
-
-<h1>Як дістатися від вокзалу (карта)</h1>
-
-
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-
-<div id="OSM-map" style="height: 1600px; width: 80%; margin: 0 auto;"></div>
-<script>var map;
-var marker = [];
-var mapOptions = {
-    scrollWheelZoom: false,
-};
-
-var id = 'OSM-map';
-
-var centerLatLng = [50.064901107926254, 19.94950890541077];
-map = L.map(id, mapOptions).setView(centerLatLng, 17);
-
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'generated with <a href="https://www.osm-generator.com/">osm-generator.com</a> - &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-}).addTo(map);
-
-var latlngs = [
-    [50.068310075914724, 19.948045988790845],
-    [50.06777980791873, 19.94702618715543], // вихід з вокзалу
-    [50.06777980791873, 19.94691884673839],
-    [50.067194440335825, 19.9469081126967],
-    [50.06691897076591, 19.94692958078009],
-    [50.06663661281477, 19.94718719778102],
-    [50.066533310710035, 19.94726233607297],
-    [50.06618208188967, 19.94734820840661], // ріг старого вокзалу
-    [50.066154534422445, 19.94704765523886],
-    [50.065947927913896, 19.946865176529876],
-    [50.06481846326999, 19.946897378655002], // міст початок
-    [50.06462562518497, 19.94692958078009], // міст кінець
-    [50.06457741554257, 19.9465216871953], // ul. Radziwiłłowska, початок
-    [50.06184316080958, 19.94718719778102], // ul. Radziwiłłowska, 3
-    [50.06124394562791, 19.947337474364918], // ul. Radziwiłłowska, кінець
-    [50.06176739838387, 19.948700697661483],
-    [50.06220819627452, 19.949795569915423],
-    [50.062834948801346, 19.951126591086904],
-    [50.06324818774606, 19.952876239884908], // ul. Kopernika, 21
-    [50.0634134823272, 19.953659824929396], // ul. Śniadeckich, початок
-    [50.062952033530436, 19.953926218649197], // ul. Śniadeckich, початок коротшої дороги?
-    [50.06257322896176, 19.95409796331649],
-    [50.06118884500555, 19.954130165441576],
-    [50.06072048716025, 19.954130165441576],
-    [50.059962839788284, 19.95388328248238], // ul. Śniadeckich, сходи біля парковки
-    [50.06011437021991, 19.95276694214501],
-    [50.060878902825564, 19.952994314343638] // ul. Śniadeckich, 5
-];
-
-var polyline = L.polyline(latlngs, {color: 'red'}).addTo(map);
-
-marker = L.marker(
-    L.latLng(50.068310075914724, 19.948045988790845), {
-        title: 'Головний вокзал'
-    });
-marker.addTo(map);
-marker.bindPopup('Головний вокзал');
-
-
-marker = L.marker(
-    L.latLng(50.061863823268546, 19.947359010121694), {
-        title: 'Нічліг на 1 ніч, консультація'
-    });
-marker.addTo(map);
-marker.bindPopup('Нічліг на 1 ніч, консультація');
-
-
-marker = L.marker(
-    L.latLng(50.063062230661494, 19.952962179891937), {
-        title: 'Нічліг'
-    });
-marker.addTo(map);
-marker.bindPopup('Нічліг');
-
-
-marker = L.marker(
-    L.latLng(50.06099599232892, 19.95319832880944), {
-        title: 'Нічліг'
-    });
-marker.addTo(map);
-marker.bindPopup('Нічліг');
-
-</script>
-
-
+    <h1>Пункти нічлігу</h1>
+    <p>
+        <strong>УВАГА!</strong> Перш ніж іти в пункт нічлігу, подзвоніть і переконайтесь, що там є достатньо вільних
+        місць!
+    </p>
+    <ul>
+        <li>
+            <h3>ul. Berka Joselewicza, 21/2</h3>
+            <p>tel. <a href="tel:+48888046847">+48 888 046 847</a></p>
+        </li>
+        <li>
+            <h3>Fundacja Zero Camps</h3>
+            <p>tel. <a href="tel:+48536888915">+48 536 888 915</a></p>
+        </li>
+        <li>
+            <h3>Fundacja Wolno Nam</h3>
+            <p>tel. <a href="tel:+48797826249">+48 797 826 249</a></p>
+        </li>
+    </ul>
 </body>
+
 </html>
